opam-version: "2.0"
maintainer: "Jan Kolipinski"
version: "dev"
name: "tacacs"
# homepage: "https://github.com/lthms/coq-MiniHTTPServer"
# dev-repo: "git+https://github.com/lthms/coq-MiniHTTPServer.git"
# bug-reports: "https://github.com/lthms/coq-MiniHTTPServer.git/issues"

# synopsis: "A minimal HTTP server implemented in Coq"

depends: [
  "ocaml"
  "dune"
   "coq" 
   "lwt"
  
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

authors: [
  "Thomas Letan"
  "Yann Régis-Gianas"
]
